After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 598902 - Flash effect implementation problematic from window-management POV
Flash effect implementation problematic from window-management POV
Status: RESOLVED FIXED
Product: cheese
Classification: Applications
Component: general
git master
Other Linux
: Normal normal
: 2.28
Assigned To: Cheese Maintainer(s)
Cheese Maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2009-10-19 08:28 UTC by Tomas Frydrych
Modified: 2009-12-03 19:42 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Make the flash window a popup (6.59 KB, patch)
2009-12-03 19:42 UTC, Bastien Nocera
committed Details | Review

Description Tomas Frydrych 2009-10-19 08:28:08 UTC
The flash effect uses a regular top-level fullscreen window. This is not a good choice from a WM point of view, as that appears to the WM as if another application was started. If using Mutter as the WM, you will likely get the map() effect run on this window, and even worse, in Moblin, where the default policy is to place each application on a new workspace, the flash will trigger temporary workspace switch away from the Cheese main window.

Windows like this should be override-redirect (e.g. GTK_WINDOW_POPUP), and also parented to the application main window.
Comment 1 Filippo Argiolas 2009-10-19 09:40:57 UTC
Confirmed on gnome-shell/mutter, cannot test it on moblin right now but I'm pretty sure you're right.
Comment 2 Filippo Argiolas 2009-10-19 09:59:19 UTC
Do you have any idea about an alternative implementation? mutter doesn't seem to honor fullscreen requests on POPUP gtk windows (probably because of override redirect all those skip_pager, skip_taskbar, fullscreen, etc. functions don't work with popups). Shouldn't the window manager disable the effects on undecorated+skip taskbar+skip pager windows?
Comment 3 Tomas Frydrych 2009-10-19 10:18:34 UTC
The fullscreen state only makes sense for windows that the WM manages, and it does not manage override-redirects; I think the simplest thing is to size the popup window manually to match the screen size.
Comment 4 Bastien Nocera 2009-12-03 19:42:16 UTC
Created attachment 149029 [details] [review]
Make the flash window a popup

To fix problems with some window managers.
Comment 5 Bastien Nocera 2009-12-03 19:42:48 UTC
Attachment 149029 [details] pushed as 272eb3f - Make the flash window a popup