Make the flash window a popup

To fix problems with some window managers.

https://bugzilla.gnome.org/show_bug.cgi?id=598902