libcheese/cheese-flash.h
@@ -42,7 +42,7 @@ typedef struct
 } CheeseFlash;
 
 GType        cheese_flash_get_type (void) G_GNUC_CONST;
-CheeseFlash *cheese_flash_new (void);
+CheeseFlash *cheese_flash_new (GtkWidget *parent);
 
 void cheese_flash_fire (CheeseFlash *flash);
 
